# dns-updater

./: Cargo.toml  README.md  flake.nix
src/: dyn_dns.rs  ip_grabber.rs  lib.rs  main.rs  persistence.rs  runner.rs
