[package]
name = "dns_updater"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
env_logger = "0.11.8"
log = "0.4.29"
reqwest = { version = "0.13.1", features = ["query"] }
tokio = { version = "1.49.0", features = [
    "fs",
    "io-util",
    "macros",
    "rt",
    "sync",
    "time",
] }
